@@ -8,7 +8,6 @@ import org.springframework.stereotype.Service;
 
 import jakarta.transaction.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,24 +18,28 @@ public class NotificationService {
     // 알림 목록 출력
     @Transactional
     public List<NotificationServiceResponse> getUnreadNotifications(String recipientId) {
-        return notificationRepository.findByRecipientIdAndIsReadFalse(recipientId)
-                .stream()
-                .map(NotificationServiceResponse::new) // Domain -> ServiceResponse로
-                .collect(Collectors.toList());
+        return notificationRepository.findByRecipientIdAndIsReadFalse(recipientId).stream()
+                .map(NotificationServiceResponse::new)
+                .toList();
+//                .collect(Collectors.toList());
     }
 
+    // 개별 읽음 처리
     @Transactional
     public void markAsRead(Long notificationId) {
         Notification notification = notificationRepository.findById(notificationId)
                 .orElseThrow(() -> new IllegalArgumentException("해당 알림이 존재하지 않습니다."));
         notification.markAsRead();
-        notificationRepository.save(notification);
+        // 읽음 상태 반영
+        notificationRepository.edit(notification);
     }
 
+    // 전체 읽음 처리
     @Transactional
     public void markAllAsRead(String recipientId) {
-        List<Notification> notifications = notificationRepository.findByRecipientIdAndIsReadFalse(recipientId);
-        notifications.forEach(Notification::markAsRead);
-        notifications.forEach(notificationRepository::save);
+        notificationRepository.markAllAsReadByRecipientId(recipientId);
+
     }
+
+
 }
